[tool.poetry]
name = "sqlalchemy-cubrid"
version = "1.0.0"
description = "CUBRID dialect for SQLAlchemy 2.x — supports CUBRID 10.2 through 11.4"
authors = [
    "Yeongseon Choe <yeongseon.choe@gmail.com>",
    "Gyeongjun Paik <paikend@gmail.com>",
    "Andrew Ji-ho Lee <search5@gmail.com>",
]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/search5/sqlalchemy_cubrid"
repository = "https://github.com/search5/sqlalchemy_cubrid"
documentation = "https://search5.github.io/sqlalchemy_cubrid/"
keywords = ["SQLAlchemy", "CUBRID", "database", "dialect", "ORM"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Database :: Front-Ends",
]
packages = [{ include = "sqlalchemy_cubrid" }]

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = ">=2.0"
pycubrid = "^0.6.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=2.5.2"
alembic = "^1.18.4"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6"
mkdocs-material = "^9.5"
mkdocs-static-i18n = "^1.2"

[tool.poetry.plugins."sqlalchemy.dialects"]
cubrid = "sqlalchemy_cubrid.dialect:CubridDialect"

[tool.poetry.plugins."alembic.ddl"]
cubrid = "sqlalchemy_cubrid.alembic_impl:CubridImpl"

[tool.ruff]
line-length = 79
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = [
    "E501",   # line too long (handled by formatter)
    "SIM108", # ternary operator
    "UP015",  # redundant open mode
    "UP031",  # percent format (common in SQL string building)
]

[tool.ruff.lint.isort]
known-first-party = ["sqlalchemy_cubrid"]

[tool.pytest.ini_options]
addopts = "--tb native -v -r fxX"
python_files = "tests/test_*.py"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
